...
    fieldLabel: 'Enter url',
    scheme: '',
    prefill: 'https://',
    keyboardType: TextInputType.url,
  ),
  email(
    label: 'Email',
    fieldLabel: 'Enter email',
    scheme: 'mailto:',
    prefill: '',
    keyboardType: TextInputType.emailAddress,
  ),
  phone(
    label: 'Phone',
...
